<resources>
    <string name="app_name">HeroesActivity</string>
    <string name="email">Correo Electronico</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar sesion</string>
    <string name="invalidCredentials">Correo o contraseña incorrecta</string>
    <string name="heroes">Heroes</string>
    <string name="bienvenido">"Bienvenido"</string>
    <string name="villians">Villanos</string>
    <string name="anti_heroes">Anti-Heroes</string>
    <string name="press">Presione su favorito</string>
</resources>