<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeActivity"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        >

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/baseline_person_24"
                android:tint="@color/icon_tint" />

            <TextView
                android:id="@+id/usernameSH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bienvenido"
                android:textSize="24sp"
                android:textStyle="italic" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/logoutBtn"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/baseline_logout_24"
                android:tint="@color/icon_tint" />

        </LinearLayout>

        <TextView
            android:id="@+id/heroes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/heroes"
            android:textSize="24dp"
            android:textStyle="normal"
            android:layout_marginLeft="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header"
            app:layout_constraintVertical_bias="0"
            />

        <LinearLayout
            android:id="@+id/heroes_dc_marvel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/heroes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.02"
            >

            <ImageView
                android:id="@+id/dcComics"
                android:layout_width="170dp"
                android:layout_height="300dp"
                android:src="@drawable/dc" />

            <ImageView
                android:id="@+id/marvelComics"
                android:layout_width="200dp"
                android:layout_height="300dp"
                android:src="@drawable/marvel" />

        </LinearLayout>

        <TextView
            android:id="@+id/villanos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/villians"
            android:textSize="24dp"
            android:textStyle="normal"
            android:layout_marginLeft="15dp"
            app:layout_constraintTop_toBottomOf="@+id/heroes_dc_marvel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.05"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <LinearLayout
            android:id="@+id/villanos_dc_marvel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/villanos"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0"
            >

            <ImageView
                android:id="@+id/marvelComicsV"
                android:layout_width="180dp"
                android:layout_height="300dp"
                android:src="@drawable/marvel" />

            <ImageView
                android:id="@+id/dcComicsV"
                android:layout_width="200dp"
                android:layout_height="300dp"
                android:src="@drawable/dc"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/anti_heroes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/anti_heroes"
            android:textSize="24dp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/villanos_dc_marvel"
            app:layout_constraintVertical_bias="1.0" />

        <LinearLayout
            android:id="@+id/anti_dc_marvel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/anti_heroes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0"
            >

            <ImageView
                android:id="@+id/marvelComicsV"
                android:layout_width="180dp"
                android:layout_height="300dp"
                android:src="@drawable/marvel" />

            <ImageView
                android:id="@+id/dcComicsV"
                android:layout_width="200dp"
                android:layout_height="300dp"
                android:src="@drawable/dc"
                />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
